--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//WebContent/WEB-INF/views/add-job/addjob.jsp=UTF-8
 encoding//WebContent/WEB-INF/views/login/login.jsp=UTF-8
+encoding//src/controller/LoginSignUpController.java=UTF-8
